<resources>
    <string name="app_name">HealthApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">HealthApp</string>
    <string name="title_activity_help">HealthApp</string>
    <string name="title_activity_about">HealthApp</string>
    <string name="action_bmi">BMI calculation</string>
    <string name="action_excercises">Excercises</string>
    <string name="action_meals">Meals</string>
    <string name="action_progress">Progress overview</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="title_activity_bmi">HealthApp</string>
    <string name="title_activity_meals">HealthApp</string>
    <string name="title_activity_progress">HealthApp</string>
    <string name="action_overview">Overview</string>

    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="title_activity_excercise">ExcerciseActivity</string>
</resources>
