<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="usw.app.martin.healthapp.activity.ExcerciseActivity">
    <item android:id="@+id/action_overview" android:title="@string/action_overview"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_bmi" android:title="@string/action_bmi"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_excercises" android:title="@string/action_excercises"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_meals" android:title="@string/action_meals"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
